# boilerplate_python_docker

./: Dockerfile  Makefile  README.md  pyproject.toml
src/: app.py  pyproject.toml
