[tool.poetry]
name = "BoilerplatePythonDocker"
version = "1.0.0"
description = "Boilerplate code to copy and get a repo started from"
authors = ["X"]

[tool.poetry.dependencies]
python = "~3.9"
python-json-logger = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry==1.1.6"]
build-backend = "poetry.masonry.api"
