[tool.poetry]
name = "WordRemoveAndCount"
version = "1.0.0"
description = "\"Removes words given, from a source, and then does a word count on remaining words.\""

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
