[tool.poetry]
name = "WordRemoveAndCount"
version = "1.0.0"
description = "\"Removes words given, from a source, and then does a word count on remaining words.\""
authors = ["X"]

[tool.poetry.dependencies]
python = "^3.9"
python-json-logger = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry==1.1.6"]
build-backend = "poetry.masonry.api"
